[tool.poetry]
name = "investment_strategy"
version = "0.1.0"
description = ""
authors = ["jaepilchoi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
backtrader = "^1.9.74"
jupyterlab = "^2.0.1"
pandas = "^1.0.3"
numpy = "^1.18.2"
pandas-datareader = "^0.8.1"
matplotlib = "^3.2.1"
nodejs = "^0.1.1"
ipywidgets = "^7.5.1"
pylint = "^2.4.4"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
